# todo_list

./: .coverage  .gitignore  alembic.ini  celerybeat-schedule  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 40dbff788d66_add_created_at_to_tasks.py  7f4d3d929f76_update.py  815b212c0609_create_users_and_tasks_table.py  8c9494b88fa7_add_created_at.py
src/todo_list/: celery_app.py  database.py  logger.py  logging.py  main.py  redis_client.py  tasks.py
src/todo_list/components/task_manager/: auth.py  constants.py  controller.py  dependencies.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_todo.py
